<resources>
    <string name="app_name">RockwellShop</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="label_customers">Customers</string>
    <string name="label_products">Products</string>
    <string name="label_shopping_cart">Shopping Cart</string>
    <string name="no_product_found">No Product found</string>
    <string name="no_customer_found">No customer found</string>
    <string name="no_items_found">There is no items yet</string>
    <string name="label_sub_total">Sub Total</string>
    <string name="label_tax">Tax</string>
    <string name="label_total_amount">Total amount</string>
    <string name="label_cash">Cash</string>
    <string name="label_card">Card</string>
    <string name="label_paypal">PayPal</string>
    <string name="label_clear">Clear</string>
    <string name="label_checkout">Checkout</string>
    <string name="label_category">Category</string>
    <string name="label_qty">qty</string>
    <string name="label_delete">Delete</string>
</resources>
