<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    tools:context="com.rockwellstudios.rockwellshop.ui.checkout.CheckoutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_padding_tiny"
        android:paddingRight="@dimen/margin_padding_tiny">


        <android.support.v7.widget.RecyclerView
            android:id="@+id/checkout_list_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:scrollbars="vertical" />

        <TextView
            android:id="@+id/empty_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/no_customer_found"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="end"
                android:text="@string/label_sub_total" />


            <TextView
                android:id="@+id/sub_total_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_padding_small"
                android:layout_marginStart="@dimen/margin_padding_small"
                android:gravity="end" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="end"
                android:text="@string/label_tax" />


            <TextView
                android:id="@+id/tax_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_padding_small"
                android:layout_marginStart="@dimen/margin_padding_small"
                android:gravity="end" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="end"
                android:text="@string/label_total_amount" />


            <TextView
                android:id="@+id/total_amount_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_padding_small"
                android:layout_marginStart="@dimen/margin_padding_small"
                android:gravity="end" />

        </LinearLayout>


    </LinearLayout>

    <RadioGroup
        android:id="@+id/radio_group_payment_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_padding_tiny"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/button_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:checked="true"
            android:text="@string/label_cash" />

        <RadioButton
            android:id="@+id/button_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:checked="false"
            android:text="@string/label_card" />

        <RadioButton
            android:id="@+id/button_paypal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:checked="false"
            android:text="@string/label_paypal" />

    </RadioGroup>

    <LinearLayout
        style="@style/ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_padding_tiny"
        android:layout_marginTop="@dimen/margin_padding_tiny"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clear_cart_button"
            style="@style/ButtonBarButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_clear" />

        <View
            android:layout_width="@dimen/margin_padding_small"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/checkout_button"
            style="@style/ButtonBarButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_checkout" />


    </LinearLayout>

</LinearLayout>
